# react-native-macos

./: .flowconfig  .gitignore  .travis.yml  README.md  React.podspec  circle.yml  jest-preset.json  npm-shrinkwrap.json  package-lock.json  package.json
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
@types/: index.d.ts  legacy-properties.d.ts
Examples/2048/: index.osx.js
IntegrationTests/: AppEventsTest.js  AsyncStorageTest.js  ImageSnapshotTest.js  IntegrationTestHarnessTest.js  IntegrationTestsApp.js  LayoutEventsTest.js  PromiseTest.js  PropertiesUpdateTest.js  RCTRootViewIntegrationTestApp.js  ReactContentSizeUpdateTest.js  SimpleSnapshotTest.js  SizeFlexibilityUpdateTest.js  TimersTest.js
ReactLinux/: README.md  UIExplorerApp.linux.js  UIExplorerApp.osx.js
ReactLinux/react-gtk-rs/: Cargo.toml
ReactLinux/react-gtk-rs/src/: lib.rs
ReactLinux/react-gtk-rs/src/bridge/: executors.rs  mod.rs
babel-preset/: package.json
jest/: setup.js
jestSupport/: env.js
local-cli/: cli.js  commands.js  default.config.js  index.js  platform.js  wrong-react-native.js
packager/: blacklist.js  defaults.js  react-native-xcode.sh  rn-cli.config.js  transformer.js
react-native-cli/: index.js  package.json
react-native-desktop-cli/: index.js  package.json
react-native-macos-cli/: index.js  package.json
scripts/: e2e-sinopia.config.yml  e2e-test.sh  ios-install-third-party.sh  macos-configure-folly.sh  macos-configure-glog.sh  macos-install-third-party.sh  objc-test-macos.sh  objc-test.sh  react-native-xcode.sh  run-ci-e2e-tests.js
(+989 files in other folders)
