[package]
name = "react-gtk-rs"
version = "0.1.0"
authors = ["Dmitriy Loktev <unknownliveid@hotmail.com>"]
repository = "https://github.com/ptmt/react-native-desktop"

[dependencies]
jsc = { path = "../jsc" }
rustc-serialize = "0.3"
time = "0.1.35"
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
libc = "0.2.0"
